[project]
name = "rag-chroma-gemini-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.2.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "onnxruntime==1.18.0",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
]
